deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gunn
  labels:
    name: gunn
    app.kubernetes.io/name: gunn
    app.kubernetes.io/version: "0.1.0"
